[workspace]
members = [
    "bronze",
    "bronze/bronze-utils",
    "bronze/bronze-time",
    "bronze/bronze-core"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
cron = "0.12.0"
chrono = "0.4.22"
rayon = "1.5"
once_cell = "1.16.0"
anyhow = "1.0.55"
#anyhow = "1.0"

futures = "0.3.25"
