[package]
name = "bronzeflow"
version = "0.1.0"
authors = ["fangyinc <staneyffer@gmail.com>"]
edition = "2021"
keywords = ["scheduler", "query-engine", "arrow"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/bronze-rs/bronze"
description = "Bronze: A workflow scheduler in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bronzeflow-core = { version = "0.1.0", path = "bronzeflow-core" }
