[package]
name = "bronzeflow-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron.workspace = true
chrono.workspace = true
futures.workspace = true

bronzeflow-utils = { version = "0.1.0", path = "../bronzeflow-utils" }
bronzeflow-time = { version = "0.1.0", path = "../bronzeflow-time" }

tokio = { version = "1.21.2", features = ["full"] }
cfg-if = "1.0"
derive_builder = "0.11.2"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["async", "async_tokio"]
async = []
async_tokio = ["async"]
