[package]
name = "bronzeflow-core"
version.workspace = true
authors = ["fangyinc <staneyffer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bronze-rs/bronze"
description = "Core of bronzeflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron.workspace = true
chrono.workspace = true
futures.workspace = true

bronzeflow-utils = { version = "0.1.0", path = "../bronzeflow-utils" }
bronzeflow-time = { version = "0.1.0", path = "../bronzeflow-time" }

tokio = { version = "1.21.2", features = ["full"] }
cfg-if = "1.0"
derive_builder = "0.11.2"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["async", "async_tokio"]
async = []
async_tokio = ["async"]
