[package]
name = "bronzeflow-utils"
version.workspace = true
authors = ["fangyinc <staneyffer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bronze-rs/bronze"
description = "bronzeflow-utils: Some common util for bronzeflow(internal dependency)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
